k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cahoots
  labels:
    name: cahoots
    environment: production
